--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,143 @@ DCASE_research/challenge2019/task2(Audio_tagging)/data/preprocessed_data/mels_tr
 DCASE_research/challenge2019/task2(Audio_tagging)/data/preprocessed_data/mels_trn_noisy_best50s.pkl
 
 *.pt
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_08-25-22_pnq/events.out.tfevents.1571462722.pnq.12879.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_08-25-53_pnq/events.out.tfevents.1571462753.pnq.13083.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_08-26-16_pnq/events.out.tfevents.1571462776.pnq.13233.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_08-26-27_pnq/events.out.tfevents.1571462787.pnq.13416.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_08-29-04_pnq/events.out.tfevents.1571462944.pnq.14442.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_08-31-20_pnq/events.out.tfevents.1571463080.pnq.15136.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_08-33-17_pnq/events.out.tfevents.1571463197.pnq.15851.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_08-35-02_pnq/events.out.tfevents.1571463302.pnq.16334.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_08-36-33_pnq/events.out.tfevents.1571463393.pnq.16816.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_08-39-25_pnq/events.out.tfevents.1571463565.pnq.18412.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_08-44-20_pnq/events.out.tfevents.1571463860.pnq.20682.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_08-44-36_pnq/events.out.tfevents.1571463876.pnq.20830.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_08-51-18_pnq/events.out.tfevents.1571464278.pnq.23183.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_08-53-23_pnq/events.out.tfevents.1571464403.pnq.23856.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_08-54-22_pnq/events.out.tfevents.1571464462.pnq.24315.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_08-55-43_pnq/events.out.tfevents.1571464543.pnq.24655.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-06-15_pnq/events.out.tfevents.1571465175.pnq.28308.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-06-15_pnqbatch_size=1_lr=1/events.out.tfevents.1571465175.pnq.28308.1
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-08-05_pnqbatch_size=1_lr=1/events.out.tfevents.1571465285.pnq.28509.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-08-20_pnqbatch_size=2_lr=1/events.out.tfevents.1571465300.pnq.28662.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-09-25_pnq_batch_size=2_lr=1/events.out.tfevents.1571465365.pnq.28909.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-11-59_pnq_batch_size=2_lr=0.1/events.out.tfevents.1571465519.pnq.28909.1
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-14-27_pnq_batch_size=2_lr=0.001/events.out.tfevents.1571465667.pnq.28909.2
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-16-55_pnq_batch_size=2_lr=0.0001/events.out.tfevents.1571465815.pnq.28909.3
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-19-24_pnq_batch_size=2_lr=1e-08/events.out.tfevents.1571465964.pnq.28909.4
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-21-57_pnq_batch_size=16_lr=1/events.out.tfevents.1571466117.pnq.28909.5
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-22-49_pnq_batch_size=16_lr=0.1/events.out.tfevents.1571466169.pnq.28909.6
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-23-37_pnq_batch_size=16_lr=0.001/events.out.tfevents.1571466217.pnq.28909.7
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-24-28_pnq_batch_size=16_lr=0.0001/events.out.tfevents.1571466268.pnq.28909.8
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-25-19_pnq_batch_size=16_lr=1e-08/events.out.tfevents.1571466319.pnq.28909.9
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-26-13_pnq_batch_size=32_lr=1/events.out.tfevents.1571466373.pnq.28909.10
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-27-09_pnq_batch_size=32_lr=0.1/events.out.tfevents.1571466429.pnq.28909.11
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-28-05_pnq_batch_size=32_lr=0.001/events.out.tfevents.1571466485.pnq.28909.12
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-28-56_pnq_batch_size=32_lr=0.0001/events.out.tfevents.1571466536.pnq.28909.13
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-29-49_pnq_batch_size=32_lr=1e-08/events.out.tfevents.1571466589.pnq.28909.14
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-30-44_pnq_batch_size=64_lr=1/events.out.tfevents.1571466644.pnq.28909.15
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-31-46_pnq_batch_size=64_lr=0.1/events.out.tfevents.1571466706.pnq.28909.16
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-32-46_pnq_batch_size=64_lr=0.001/events.out.tfevents.1571466766.pnq.28909.17
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-33-42_pnq_batch_size=64_lr=0.0001/events.out.tfevents.1571466822.pnq.28909.18
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-34-41_pnq_batch_size=64_lr=1e-08/events.out.tfevents.1571466881.pnq.28909.19
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-50-43_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571467843.pnq.10376.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-51-27_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571467887.pnq.10438.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-51-38_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571467898.pnq.10471.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_09-51-46_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571467906.pnq.10509.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-00-15_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571468415.pnq.11631.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-01-09_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571468469.pnq.11734.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-01-31_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571468491.pnq.11798.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-01-48_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571468508.pnq.11843.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-04-19_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571468659.pnq.12742.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-04-51_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571468691.pnq.12814.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-06-00_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571468760.pnq.13054.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-07-12_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571468832.pnq.13956.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-07-32_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571468852.pnq.14009.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-08-15_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571468895.pnq.14418.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-18-10_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571469490.pnq.15337.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-39-00_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571470740.pnq.18009.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-41-50_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571470910.pnq.18229.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-42-02_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571470922.pnq.18405.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-42-24_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571470944.pnq.18606.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-43-05_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571470985.pnq.18824.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-43-18_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571470998.pnq.18868.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-44-40_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571471080.pnq.19011.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-45-40_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571471140.pnq.19145.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-46-00_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571471160.pnq.19211.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-47-20_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571471240.pnq.19517.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-50-09_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571471409.pnq.19973.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-51-36_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571471496.pnq.20081.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-51-46_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571471506.pnq.20125.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-55-04_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571471704.pnq.20710.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-55-11_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571471711.pnq.20764.0
