Auto stash before merge of "master" and "origin/master"

--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,33 @@ DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-51-46_pnq_batch_
 DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-55-04_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571471704.pnq.20710.0
 
 DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-55-11_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571471711.pnq.20764.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_10-57-35_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571471855.pnq.21705.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_11-14-51_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571472891.pnq.22940.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_11-51-27_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571475087.pnq.4741.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_12-35-23_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571477723.pnq.20538.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_12-38-28_pnq_batch_size=64_lr=0.003/events.out.tfevents.1571477908.pnq.23904.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_12-50-39_pnq_batch_size=64_lr=0.009/events.out.tfevents.1571478639.pnq.27161.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_12-50-51_pnq_batch_size=64_lr=0.009/events.out.tfevents.1571478651.pnq.27302.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_13-07-50_pnq_batch_size=64_lr=0.009/events.out.tfevents.1571479670.pnq.9327.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_13-08-05_pnq_batch_size=64_lr=0.009/events.out.tfevents.1571479685.pnq.9358.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_13-08-23_pnq_batch_size=64_lr=0.009/events.out.tfevents.1571479703.pnq.9394.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_13-08-45_pnq_batch_size=64_lr=0.009/events.out.tfevents.1571479725.pnq.9441.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_13-09-17_pnq_batch_size=64_lr=0.009/events.out.tfevents.1571479757.pnq.9488.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_13-15-37_pnq_batch_size=64_lr=0.009/events.out.tfevents.1571480137.pnq.12750.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_13-20-19_pnq_batch_size=64_lr=0.009/events.out.tfevents.1571480419.pnq.16799.0
+
+DCASE_research/challenge2019/task2(Audio_tagging)/runs/Oct19_13-22-44_pnq_batch_size=64_lr=0.009/events.out.tfevents.1571480564.pnq.19287.0
